<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <com.woxthebox.draglistview.DragListView
        android:id="@+id/file_list"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="visible"
    />
    <TextView
        android:id="@+id/empty_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone"
        android:layout_marginLeft="@dimen/list_icon_margin_left"
        android:layout_marginStart="@dimen/list_icon_margin_left"
        android:text="@string/empty_pdf_list"
    />

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/add_source"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        app:srcCompat="@android:drawable/ic_input_add"
        android:tint="@android:color/white"
        app:backgroundTint="@android:color/holo_blue_light"/>
</FrameLayout>
